# Spanda

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  dist-workspace.toml  package-lock.json  package.json  vitest.config.ts
crates/spanda-adr/: Cargo.toml
crates/spanda-adr/src/: generate.rs  lib.rs
crates/spanda-adr/tests/: adr_tests.rs
crates/spanda-ai/: Cargo.toml
crates/spanda-ai/src/: lib.rs  live.rs
crates/spanda-api/: Cargo.toml  build.rs
crates/spanda-api/src/: audit_log.rs  drift_collect.rs  drift_scheduler.rs  e3.rs  e4.rs  grpc.rs  grpc_policy.rs  handlers.rs  lib.rs  observability.rs  openapi_routes.rs  persistence.rs  sdk_ops.rs  server.rs  smart_spaces.rs  smart_spaces_panels.rs  state.rs  ws.rs
crates/spanda-api/src/static/: control-center.html  openapi.json
crates/spanda-api/tests/: api_policy_tests.rs  audit_siem_export_test.rs  device_api_tests.rs  drift_scan_tests.rs  grpc_live_probe.rs  grpc_tests.rs  ota_execute_live.rs  sdk_ops_tests.rs  smart_spaces_api_tests.rs  sre_incidents_tests.rs
crates/spanda-assurance/: Cargo.toml
crates/spanda-assurance/src/: anomaly.rs  certify.rs  continuity.rs  continuity_checkpoint.rs  continuity_diagnostics.rs  lib.rs  recovery.rs  recovery_coverage.rs  report.rs  runtime_bridge.rs  state.rs
crates/spanda-assurance/tests/: assurance_tests.rs  continuity_runtime.rs
crates/spanda-ast/: Cargo.toml  README.md
crates/spanda-ast/src/: assurance_decl.rs  comm_decl.rs  foundations.rs  lib.rs  nodes.rs  regex.rs  robotics_decl.rs
crates/spanda-certify/: Cargo.toml
crates/spanda-certify/src/: artifact.rs  lib.rs  prover.rs
crates/spanda-certify/tests/: prover_integration.rs  runtime_gate.rs  verify_integration.rs
crates/spanda-cli/: Cargo.toml
crates/spanda-cli/src/: assurance_cli.rs  bundled_registry.rs  chaos_cli.rs  compliance_cli.rs  config_load.rs  control_center_cli.rs  demo_cli.rs  deploy_ota.rs  diff_cli.rs  drift_cli.rs  entity_cli.rs  explain_cli.rs  generate_cli.rs  graph_cli.rs  integrity_cli.rs  main.rs  package.rs  readiness_cli.rs  recovery_cli.rs  replay_cli.rs  ros2_cli.rs  score_cli.rs  security_assurance_cli.rs  spoof_cli.rs  tamper_cli.rs  telemetry_cli.rs  trace_cli.rs  trust_cli.rs
crates/spanda-cli/tests/: package_cli.rs  verify_cli.rs
crates/spanda-cli/wix/: main.wxs
crates/spanda-codegen/: Cargo.toml
crates/spanda-codegen/src/: lib.rs
crates/spanda-config/: Cargo.toml
crates/spanda-config/src/: config_approval.rs  config_snapshots.rs  discovery_registry.rs  discovery_transport.rs  drift.rs  entity.rs  human_entities.rs  integration.rs  lib.rs  mission_approval.rs  operational_drift.rs  snapshot_encryption.rs
crates/spanda-config/tests/: config_tests.rs  entity_tests.rs
crates/spanda-docs/: Cargo.toml
crates/spanda-docs/src/: builtin_methods.rs  html_docs.rs  language_reference.rs  lib.rs  man_pages.rs  program_docs.rs
crates/spanda-driver/: Cargo.toml  README.md
crates/spanda-driver/src/: debug_session.rs  lib.rs  run.rs  verify.rs
crates/spanda-graph/: Cargo.toml
crates/spanda-graph/src/: build.rs  digital_thread.rs  format.rs  lib.rs
crates/spanda-graph/tests/: graph_tests.rs
crates/spanda-interpreter/: Cargo.toml
crates/spanda-interpreter/src/: lib.rs  options.rs  platform_events.rs  run.rs
crates/spanda-interpreter/src/runtime/: orchestrator.rs  runtime_actuators.rs  runtime_audit.rs  runtime_builtins.rs  runtime_connectivity.rs  runtime_continuity.rs  runtime_declarations.rs  runtime_eval.rs  runtime_execute.rs  runtime_health.rs  runtime_helpers.rs  runtime_kill_switch.rs  runtime_navigation.rs  runtime_operational_policy.rs  runtime_program.rs  runtime_recovery.rs  runtime_reliability.rs  runtime_robot.rs  runtime_robotics.rs  runtime_safety.rs  runtime_scheduler.rs  runtime_security.rs  runtime_sensors.rs  runtime_setup.rs  runtime_spawn.rs  runtime_tamper.rs  runtime_twin.rs  (+1 more)
crates/spanda-interpreter/tests/: learned_anomaly_runtime.rs  policy_runtime.rs  recovery_runtime.rs  state_estimator_runtime.rs  tamper_policy_runtime.rs
crates/spanda-package/: Cargo.toml
crates/spanda-package/src/: adapter.rs  category.rs  dependency.rs  hardware_req.rs  import.rs  lib.rs  lockfile.rs  manifest.rs  platform_events.rs  project.rs  publish.rs  registry.rs  registry_fetch.rs  registry_remote.rs  resolver.rs  safety.rs  trust.rs  validation.rs  vendor.rs
crates/spanda-package/tests/: hosted_registry.rs  lean_core_packages.rs  trust_tests.rs
crates/spanda-plugin/: Cargo.toml
crates/spanda-plugin/src/: loader.rs
crates/spanda-policy/: Cargo.toml
crates/spanda-policy/src/: evaluate.rs  lib.rs  readiness.rs
crates/spanda-policy/tests/: policy_tests.rs
crates/spanda-spoofing/: Cargo.toml
crates/spanda-spoofing/src/: coverage.rs  detect.rs  lib.rs  ml.rs  platform_events.rs  testing.rs  trace.rs
crates/spanda-spoofing/tests/: ml_integration.rs  platform_events.rs
crates/spanda-tamper/: Cargo.toml
crates/spanda-tamper/src/: assurance.rs  attestation.rs  attestation_sync.rs  detect.rs  diagnosis.rs  fleet.rs  integrity.rs  lib.rs  platform_events.rs  policy.rs  remote_attestation.rs  runtime.rs  runtime_bridge.rs  secure_boot.rs  test_env.rs  tpm.rs
crates/spanda-tamper/tests/: attestation_integration.rs  integrity_tests.rs  tamper_tests.rs
crates/spanda-telemetry-store/: Cargo.toml
crates/spanda-telemetry-store/src/: lib.rs  otlp.rs  platform_event_bridge.rs  push.rs  record.rs  runtime_bridge.rs  serve.rs  store.rs
crates/spanda-telemetry-store/tests/: store_tests.rs
crates/spanda-transport/: Cargo.toml
crates/spanda-transport-mqtt/: Cargo.toml  README.md
crates/spanda-transport-mqtt/src/: adapter.rs  lib.rs  live.rs
crates/spanda-transport-routing/: Cargo.toml
crates/spanda-transport-routing/src/: lib.rs
crates/spanda-transport/src/: adapter.rs  lib.rs  wire.rs
crates/spanda-trust/: Cargo.toml
crates/spanda-trust/src/: composite.rs  entity_trust.rs  lib.rs  platform_events.rs
sdk/python/: pyproject.toml
sdk/python/spanda_sdk/: client.py
sdk/python/tests/: test_client.py
(+833 files in other folders)
