[package]
name = "spanda-ai"
version.workspace = true
edition.workspace = true
description = "Spanda AI model registry, agent runtime, and mock inference helpers"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
spanda-ast = { path = "../spanda-ast" }
spanda-error = { path = "../spanda-error" }
spanda-runtime = { path = "../spanda-runtime" }
