[package]
name = "spanda-api"
version.workspace = true
edition = "2021"
description = "REST API v1 for Spanda Control Center — CLI parity gateway"
build = "build.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
spanda-audit = { path = "../spanda-audit" }
spanda-compliance = { path = "../spanda-compliance" }
spanda-config = { path = "../spanda-config" }
spanda-deploy-http = { path = "../spanda-deploy-http" }
spanda-fleet = { path = "../spanda-fleet" }
spanda-graph = { path = "../spanda-graph" }
spanda-lexer = { path = "../spanda-lexer" }
spanda-ops = { path = "../spanda-ops" }
spanda-ota = { path = "../spanda-ota" }
spanda-package = { path = "../spanda-package" }
spanda-parser = { path = "../spanda-parser" }
spanda-readiness = { path = "../spanda-readiness" }
spanda-score = { path = "../spanda-score" }
spanda-security = { path = "../spanda-security" }
spanda-ast = { path = "../spanda-ast" }
spanda-telemetry-store = { path = "../spanda-telemetry-store" }
base64 = "0.22"
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
