[package]
name = "spanda-assurance"
version.workspace = true
edition.workspace = true
description = "Mission assurance core interfaces, data models, and static analysis for Spanda"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spanda-ast = { path = "../spanda-ast" }
spanda-capability = { path = "../spanda-capability" }
spanda-error = { path = "../spanda-error" }
spanda-hardware = { path = "../spanda-hardware" }
spanda-readiness = { path = "../spanda-readiness" }
spanda-config = { path = "../spanda-config" }
spanda-certify = { path = "../spanda-certify", optional = true }
spanda-runtime = { path = "../spanda-runtime" }

[features]
certify-runtime = ["dep:spanda-certify"]

[dev-dependencies]
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
