[package]
name = "spanda-certify"
version.workspace = true
edition.workspace = true
description = "Spanda deploy certification proof checklist and runtime gate"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
spanda-ast = { path = "../spanda-ast" }
spanda-error = { path = "../spanda-error" }
spanda-hardware = { path = "../spanda-hardware" }

[dev-dependencies]
spanda-config = { path = "../spanda-config" }
spanda-driver = { path = "../spanda-driver" }
