[package]
name = "spanda-codegen"
version.workspace = true
edition.workspace = true
description = "Spanda codegen metadata renderer from SIR"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
spanda-ast = { path = "../spanda-ast" }
spanda-error = { path = "../spanda-error" }
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
spanda-sir = { path = "../spanda-sir" }
serde_json = "1"
