[package]
name = "spanda-driver"
version.workspace = true
edition.workspace = true
description = "Spanda compile driver — lexer, parser, and type-check pipeline"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
spanda-ast = { path = "../spanda-ast" }
spanda-error = { path = "../spanda-error" }
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
spanda-runtime-host = { path = "../spanda-runtime-host" }
spanda-typecheck = { path = "../spanda-typecheck" }
spanda-interpreter = { path = "../spanda-interpreter", default-features = false }
spanda-bridge = { path = "../spanda-bridge", optional = true }
spanda-debug = { path = "../spanda-debug" }
spanda-runtime = { path = "../spanda-runtime" }
spanda-sir = { path = "../spanda-sir" }
serde = { version = "1", features = ["derive"] }

[features]
default = ["full"]
full = ["bridge", "spanda-interpreter/fleet-http"]
bridge = ["dep:spanda-bridge"]
live-ai = ["spanda-interpreter/live-ai"]
cpp-native = ["bridge", "spanda-bridge/cpp-native"]
python-native = ["bridge", "spanda-bridge/python-native"]
