[package]
name = "spanda-graph"
version.workspace = true
edition.workspace = true
description = "Static dependency graph visualization for Spanda programs"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spanda-ast = { path = "../spanda-ast" }
spanda-capability = { path = "../spanda-capability" }
spanda-config = { path = "../spanda-config" }

[dev-dependencies]
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
