[package]
name = "spanda-interpreter"
version.workspace = true
edition.workspace = true
description = "Spanda interpreter staging crate — public run API re-exported from spanda-core"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
spanda-ast = { path = "../spanda-ast" }
spanda-audit = { path = "../spanda-audit" }
spanda-core = { path = "../spanda-core" }
spanda-runtime = { path = "../spanda-runtime" }
spanda-typecheck = { path = "../spanda-typecheck" }
