[package]
name = "spanda-package"
version.workspace = true
edition = "2021"
description = "Spanda package manifest, dependency resolution, and validation"

[package.metadata.dist]
dist = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
semver = { version = "1", features = ["serde"] }
thiserror = "2"
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
spanda-audit = { path = "../spanda-audit" }
spanda-hardware = { path = "../spanda-hardware" }

[[bin]]
name = "registry-index-maintain"
path = "src/bin/registry_index_maintain.rs"

[dev-dependencies]
tempfile = "3"
