[package]
name = "spanda-plugin"
version.workspace = true
edition = "2021"
description = "Versioned, capability-controlled plugin system for Spanda"

[package.metadata.dist]
dist = false

[features]
default = []
wasm-loader = ["dep:wasmtime"]
native-loader = ["dep:libloading"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
semver = { version = "1", features = ["serde"] }
thiserror = "2"
sha2 = "0.10"
spanda-audit = { path = "../spanda-audit" }
spanda-package = { path = "../spanda-package" }
wasmtime = { version = "36", optional = true }
libloading = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3"
