[package]
name = "spanda-tamper"
version.workspace = true
edition.workspace = true
description = "Verify-time tamper and integrity analysis for Spanda programs"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
spanda-ast = { path = "../spanda-ast" }
spanda-readiness = { path = "../spanda-readiness" }
spanda-security = { path = "../spanda-security" }
spanda-threat = { path = "../spanda-threat" }
spanda-spoofing = { path = "../spanda-spoofing" }
spanda-package = { path = "../spanda-package" }
spanda-deploy-http = { path = "../spanda-deploy-http" }

[dev-dependencies]
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
spanda-deploy-http = { path = "../spanda-deploy-http" }
