[package]
name = "spanda-tamper"
version.workspace = true
edition.workspace = true
description = "Verify-time tamper and integrity analysis for Spanda programs"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
spanda-ast = { path = "../spanda-ast" }
spanda-audit = { path = "../spanda-audit" }
spanda-runtime = { path = "../spanda-runtime" }
spanda-readiness = { path = "../spanda-readiness" }
spanda-security = { path = "../spanda-security" }
spanda-threat = { path = "../spanda-threat" }
spanda-spoofing = { path = "../spanda-spoofing", default-features = false }
spanda-package = { path = "../spanda-package" }
spanda-deploy-http = { path = "../spanda-deploy-http", optional = true }

[features]
default = ["http"]
http = ["dep:spanda-deploy-http", "spanda-spoofing/http"]

[dev-dependencies]
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
spanda-deploy-http = { path = "../spanda-deploy-http" }
