[package]
name = "spanda-telemetry-store"
version.workspace = true
edition.workspace = true
description = "Persistent append-only telemetry storage for devices, sensors, and heartbeats"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
push = ["dep:spanda-deploy-http"]

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spanda-runtime = { path = "../spanda-runtime" }
spanda-deploy-http = { path = "../spanda-deploy-http", optional = true }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
