[package]
name = "spanda-transport"
version.workspace = true
edition.workspace = true
description = "Spanda transport adapter traits, security policy, and TLS session primitives"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
spanda-runtime = { path = "../spanda-runtime" }
spanda-ast = { path = "../spanda-ast" }
spanda-comm = { path = "../spanda-comm" }
spanda-security = { path = "../spanda-security" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rustls-pemfile = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
webpki-roots = "0.26"
sha2 = "0.10"
