[package]
name = "spanda-trust"
version.workspace = true
edition.workspace = true
description = "Composite program trust scoring for Spanda missions"
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spanda-ast = { path = "../spanda-ast" }
spanda-audit = { path = "../spanda-audit" }
spanda-config = { path = "../spanda-config" }
spanda-package = { path = "../spanda-package" }
spanda-readiness = { path = "../spanda-readiness" }
spanda-runtime = { path = "../spanda-runtime" }
spanda-security = { path = "../spanda-security" }
spanda-tamper = { path = "../spanda-tamper" }

[dev-dependencies]
spanda-lexer = { path = "../spanda-lexer" }
spanda-parser = { path = "../spanda-parser" }
